Revert "add Will's edits and fix send button on mobile font color"
This reverts commit 974eaee5950fbd40a39004a68236e7c7f683765c.

--- a/src/Contact/contact.css
+++ b/src/Contact/contact.css
@@ -176,11 +176,13 @@ input:focus {
     padding: 10px;
     margin: 10px;
     text-transform: uppercase;
+    color: white;
     margin-left: 0;
 
   }
 
   .submitbutton:hover{
+    color: rgb(94, 98, 121);
     font-family: "NibPro-BoldItalic";
   
   }
