--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -157,10 +157,6 @@
 
 }
 
-.hero-p-bold{
-  font-family: "Lato-SemiBold";  
-}
-
 .hero-button-group{
   padding-top: 30px;
   text-align: left;
@@ -246,10 +242,6 @@
   padding-bottom: 0vh;
   padding-top: 2vw;
   transform: translate(0, 0vh);
-}
-
-.hero-p-bold{
-  font-family: "Lato-SemiBold";  
 }
 
 
@@ -428,11 +420,6 @@
     padding-bottom: 2vw;
   
   }
-
-
-.hero-p-bold{
-  font-family: "Lato-SemiBold";  
-}
 
   .hero-figuresSM{
     width: 170%;
@@ -688,10 +675,6 @@
     padding-top: 0;
   
   }
-
-.hero-p-bold{
-  font-family: "Lato-SemiBold";  
-}
 
   .hero-logo{
     justify-content: right;
